--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:tohirjon06@localhost:5432/todo?schema=public"
+# DATABASE_URL="postgresql://postgres:tohirjon06@localhost:5432/todo?schema=public"
+DATABASE_URL="postgresql://todo_7bhm_user:AIorQCe1U872OKpOtuCBYKRnn3cbTQE1@dpg-d1iklfqli9vc7389efcg-a.oregon-postgres.render.com/todo_7bhm"
+
 PORT = 4000
 ACCESS_SECRET = qwerty
 REFRESH_SECRET = qwerty123
